# Criptografia-Baseada-em-Grupo

./: .gitignore  IOT-key-agreement.pro.user.876f387  IOT-key-agreement.pro.user.8a41f48  analise.ipynb  main.cpp
.ipynb_checkpoints/: analise-checkpoint.ipynb
Data1/: energy_consumption_it_0.csv  energy_consumption_it_1.csv  energy_consumption_it_10.csv  energy_consumption_it_11.csv  energy_consumption_it_12.csv  energy_consumption_it_13.csv  energy_consumption_it_14.csv  energy_consumption_it_15.csv  energy_consumption_it_2.csv  energy_consumption_it_3.csv  energy_consumption_it_4.csv  energy_consumption_it_5.csv  energy_consumption_it_6.csv  energy_consumption_it_7.csv  energy_consumption_it_8.csv  energy_consumption_it_9.csv
ECG/: p2r1.txt  p3r1.txt  p5r1.txt  p7r1.txt  p9r1.txt
cli version/: CMakeLists.txt  FFT.h  MyApp.h  device.cpp  device.h  experiments.cpp  experiments.h  iot-key-agreement-core_global.h  main.cpp  mqttserver.cpp  trevor.cpp  trevor.h
cli version/ECG/: p10r1.txt  p11r1.txt  p1r1.txt  p4r1.txt  p6r1.txt  p8r1.txt
iot-key-agreement-core/: FFT.cpp  device.cpp  device.h  key_p1r1.txt  mqttserver.cpp  trevor.cpp  trevor.h
iot-key-agreement-gui/: experimentsui.cpp  experimentsui.h  experimentsui.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
